--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 	<head>
 		<title>Clementine.js - The elegant and lightweight full stack JavaScript boilerplate.</title>
 		
-		<link href="/public/css/main.css" rel="stylesheet" type="text/css">
+		<link href="css/main.css" rel="stylesheet" type="text/css">
 	</head>
 
 
